# jj

./: Cargo.toml  SCRIPTING.md  mkdocs.yml
cli/: Cargo.toml
cli/src/: cli_util.rs  color_formatter.rs  command_error.rs  commit_templater.rs  diff_util.rs  movement_util.rs  revset_util.rs  template_builder.rs  text_util.rs
cli/src/commands/: arrange.rs  log.rs  mod.rs  next.rs  prev.rs  run.rs  script.rs  status.rs
cli/tests/: runner.rs  test_run_command.rs  test_status_command.rs
core/: Cargo.toml
core/proc-macros/: Cargo.toml
core/src/: backend.rs  commit.rs  graph.rs  index.rs  lib.rs  matchers.rs  merge.rs  object_id.rs  op_store.rs  operation.rs  repo.rs  repo_path.rs  revset.rs  revset_parser.rs  signing.rs  store.rs  tree.rs  view.rs  working_copy.rs  workspace_store.rs
docs/: branches.md
docs/design/: topics.md
lib/: Cargo.toml
lib/core/: Cargo.toml
lib/core/src/: backend.rs  commit.rs  fileset.rs  graph.rs  index.rs  lib.rs  matchers.rs  merge.rs  (+16 more)
lib/src/: backend.rs  commit.rs  config.rs  conflict_labels.rs  copies.rs  default_working_copy_store.rs  dsl_util.rs  evolution.rs  files.rs  fileset.rs  formatter.rs  graph.rs  index.rs  lib.rs  matchers.rs  merge.rs  merged_tree.rs  object_id.rs  op_store.rs  operation.rs  read_only_user_repo.rs  ref_name.rs  repo.rs  repo_path.rs  revset.rs  revset_parser.rs  revset_util.rs  settings.rs  signing.rs  store.rs  submodule_store.rs  trailer.rs  transaction.rs  tree.rs  tree_merge.rs  user_error.rs  view.rs  working_copy.rs  working_copy_store.rs  workspace.rs  (+4 more)
lib/tests/: test_workspace_util.rs
mahou/: Cargo.toml  README.md
mahou/src/: builtin.rs  interpreter.rs  lib.rs
(+5 files in other folders)
