[package]
name = "jj-core"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]

blake2 = { workspace = true }
chrono = { workspace = true }
clru = { workspace = true }
digest = { workspace = true }
etcetera = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jj-core-proc-macros = { workspace = true }
prost = { workspace = true }
pollster = { workspace = true }
ref-cast = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


[lints]
workspace = true
